Closed
Bug 854196
Opened 12 years ago
Closed 12 years ago
"ASSERTION: This should not be called when mWindow is not null!" from document.open()
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: Ms2ger, Assigned: Ms2ger)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
3.96 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
A long time ago (in bug 659738), I made the version of document.open() that calls window.open() use nsDocument::GetWindowInternal() instead of JS_GetGlobalForObject. Turns out this asserts. Not sure what the expected API is here.
![]() |
||
Comment 1•12 years ago
|
||
Just GetWindow(), I think.
Assignee | ||
Updated•12 years ago
|
Assignee: nobody → Ms2ger
Assignee | ||
Comment 2•12 years ago
|
||
Attachment #731850 -
Flags: review?(bzbarsky)
![]() |
||
Comment 3•12 years ago
|
||
Comment on attachment 731850 [details] [diff] [review]
Patch v1
r=me, but watch out for bustage from the MOZ_ASSERT bits...
Attachment #731850 -
Flags: review?(bzbarsky) → review+
Assignee | ||
Comment 4•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•