Bug 854196 - Don't call GetWindowInternal directly, and make assertions harder to ignore; r=bz